--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,11 @@ repos:
       pass_filenames: true
       # this seems to need to be here in addition to setup.cfg
       exclude: __init__.py, setup.py
-
+- repo: https://github.com/hadialqattan/pycln
+  rev: v0.0.1-alpha.2 # Possible releases: https://github.com/hadialqattan/pycln/tags
+  hooks:
+    - id: pycln
+      args: [--config=pyproject.toml]
 
 - repo: local
   hooks:
