--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,9 @@ repos:
     - id: flake8
       pass_filenames: true
       # this seems to need to be here in addition to setup.cfg
-      exclude: __init__.py, setup.py
+      exclude: __init__.py, setup.py, tests/test_what.py
+      args: ['--config=setup.cfg']
+
 - repo: https://github.com/hadialqattan/pycln
   rev: v0.0.1-alpha.2 # Possible releases: https://github.com/hadialqattan/pycln/tags
   hooks:
