removed print_exception

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,4 +7,6 @@ exclude =
         __pycache__,        
         build,
         dist,
-        tests/test_what.py
+        tests/test_what.py,
+        __init__.py,
+        pyinspect/__init__.py,
