--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,15 +1,9 @@
 repos:
 -   repo: https://github.com/python/black
-    rev: 19.10b0
+    rev: 20.8b1
     hooks:
     - id: black
       pass_filenames: true
-
-# - repo: https://github.com/hadialqattan/pycln
-#   rev: v0.0.1-alpha.2 # Possible releases: https://github.com/hadialqattan/pycln/tags
-#   hooks:
-#     - id: pycln
-#       args: [--config=pyproject.toml]
 
 -   repo: https://gitlab.com/pycqa/flake8
     rev: 3.7.9
@@ -22,18 +16,18 @@ repos:
 
 
 
-- repo: local
-  hooks:
-    - id: pytest
-      name: pytest
-      entry: bash -c 'pytest'
-      language: system
-      types: [python]
-      pass_filenames: false
-    - id: make_coverage_badge
-      name: make_coverage_badge
-      entry: bash -c 'rm coverage.svg;coverage-badge -o coverage.svg'
-      language: system
-      types: [python]
-      pass_filenames: false
+# - repo: local
+#   hooks:
+#     - id: pytest
+#       name: pytest
+#       entry: bash -c 'pytest'
+#       language: system
+#       types: [python]
+#       pass_filenames: false
+#     - id: make_coverage_badge
+#       name: make_coverage_badge
+#       entry: bash -c 'rm coverage.svg;coverage-badge -o coverage.svg'
+#       language: system
+#       types: [python]
+#       pass_filenames: false
 
