stricter pre-commit

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [flake8]
-ignore = E203,W503,E501,E731,C901,W291,W293,E402,E722
+ignore = E203,W503,E501,E731
 max-line-length = 79
 max-complexity = 18
 exclude =
@@ -10,3 +10,5 @@ exclude =
         tests/test_what.py,
         __init__.py,
         pyinspect/__init__.py,
+        scripts/*,
+        tests/*,
