--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
 addopts =  --cov=pyinspect --cov-report=html --durations=0
-
-# to include slow add --runslow to `pytest`
+filterwarnings =
+    error
+    ignore::UserWarning
